--- a/nodejs-helloworld/package.json
+++ b/nodejs-helloworld/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Hello World!",
   "main": "app.js",
+  "scripts": "npm start",
   "author": "Red Hat Training",
   "license": "ASL",
   "dependencies": {
